style.css
@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');


body {

    font-family: salsa, sans-serif;
    line-height: 1.5rem;
    color: whitesmoke;
    font-size: 20px;
 }


h1 {

    color: whitesmoke;
    font-size: 30px;
    font-family: Shrikhand, sans-serif;
}



h2 {

    color: whitesmoke;
    font-family: Shrikhand, sans-serif;

}

h3 {

    color: whitesmoke;
    font-family: Shrikhand, sans-serif;
}

.highlight {

    color: whitesmoke;
    font-family: Shrikhand, sans-serif;
}

body {

    background-image: linear-gradient(to right top, #09796f, #00747b, #006d86, #00658d, #005c8e, #08568e, #174f8e, #26488c, #1f438e, #193e8f, #143890, #113290);
    }
    
#font {

    font-family: didot;
}

#lists ul,ol {

    color:whitesmoke;

}

#a:link,a:visited {

color:whitesmoke;

}


#a:hover,a:active {

color: grey;

} 

li::marker {

    color: #26488c;
}

p {
    position: relative;
 }
 /* the above code is to do with positioning, and allows us to use the z-index property below, we will get to positioning a bit later on */  
 
 footer::after {
    content: "";
    background-color: rgb(69, 123, 204);
    height: 20px;
    width: 50%;
    position: absolute;;
    left: 20px;
    z-index: -1;
 }
 
 a {

    text-decoration: none;
 }

 .span-element {
    height: 100px;
    width: 100px;
    color: white;
    background-color: blue;
 }

 .selfie {

    float: right;
    border: 5px dotted #555;
    padding: 10x; 
    border-radius: 100%;
    border-width: 10px;
 }

 .dropbtn {
    background-color: rgb(36, 36, 102);
    color: white;
    padding: 25px;
    font-size: 16px;
    border: none;
    float: right;
 }


.dropdown {
    position: relative;
    display: inline-block;
    float: right;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: whitesmoke;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgb(45, 133, 96);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: rgb(36, 36, 102);
    padding: 12px 16px;
    font-family: shrikhand, sans-serif;
    display: block;
  }
  
  .dropdown-content a:hover {

    background-color: rgb(66, 154, 212);
}
  
  .dropdown:hover .dropdown-content 
  {display: block;}
  
  .dropdown:hover .dropbtn {

    background-color: rgb(36, 36, 102);
}

